[package]
name = "aisle-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.7.2"
futures = "0.3.30"
rand = { version = "0.8.5", features = ["small_rng"] }
thiserror = "1.0.63"
tokio = "1.40.0"
tokio-util = { version = "0.7.12", features = ["codec"] }
