[package]
name = "aisle-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.82"
bytes = { version = "1.7.2", features = ["serde"] }
futures = "0.3.30"
heapless = "0.8.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_bytes = "0.11.15"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["io-util", "macros", "net"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["codec"] }
