[package]
name = "aisle-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
bytes = { version = "1.7.1", features = ["serde"] }
monoio = "0.2.4"
quick-impl = "0.1.0"
rand = { version = "0.8.5", features = ["small_rng"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_bytes = "0.11.15"
thiserror = "1.0.63"
